[package]
name = "clidoc"
version = "0.1.0"
edition = "2024"
authors = ["Yoshiki Kudo <kudo.yoshiki@gmail.com>"]
license = "MIT"
categories = ["development-tools", "command-line-utilities"]
description = ""
keywords = ["aws", "doc"]
readme = "README.md"
repository = "https://github.com/335g/clidoc"

[dependencies]
anyhow = "1.0.97"
inquire = "0.7.5"
open = "5.3.2"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
